--- a/prepros-6.config
+++ b/prepros-6.config
@@ -112,6 +112,13 @@
         "includes/_layout.pug",
         "includes/_nav.pug"
       ]
+    },
+    {
+      "path": "includes/media.pug",
+      "imports": [
+        "includes/_layout.pug",
+        "includes/_nav.pug"
+      ]
     }
   ],
   "projectView": {
