--- a/prepros-6.config
+++ b/prepros-6.config
@@ -119,6 +119,20 @@
         "includes/_layout.pug",
         "includes/_nav.pug"
       ]
+    },
+    {
+      "path": "includes/others.pug",
+      "imports": [
+        "includes/_layout.pug",
+        "includes/_nav.pug"
+      ]
+    },
+    {
+      "path": "includes/shops.pug",
+      "imports": [
+        "includes/_layout.pug",
+        "includes/_nav.pug"
+      ]
     }
   ],
   "projectView": {
