--- a/prepros-6.config
+++ b/prepros-6.config
@@ -147,6 +147,27 @@
         "includes/_layout.pug",
         "includes/_nav.pug"
       ]
+    },
+    {
+      "path": "includes/news.pug",
+      "imports": [
+        "includes/_layout.pug",
+        "includes/_nav.pug"
+      ]
+    },
+    {
+      "path": "includes/market.pug",
+      "imports": [
+        "includes/_layout.pug",
+        "includes/_nav.pug"
+      ]
+    },
+    {
+      "path": "includes/games.pug",
+      "imports": [
+        "includes/_layout.pug",
+        "includes/_nav.pug"
+      ]
     }
   ],
   "projectView": {
