--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 .well-known
+.well-known/brave-rewards-verification.txt
+zakladki.github.io/.well-known/brave-rewards-verification.txt
+https://zakladki.github.io/.well-known/brave-rewards-verification.txt
