--- a/prepros.config
+++ b/prepros.config
@@ -14,7 +14,7 @@
       "afterUpload": false
     },
     "sync": {
-      "enable": false,
+      "enable": true,
       "mouse": true,
       "keyboard": true,
       "form": true,
@@ -346,17 +346,6 @@
         "keep_fnames": false,
         "safari10": false
       },
-      "node-sass": {
-        "indentType": "space",
-        "allowWildcardImports": false,
-        "indentWidth": 2,
-        "linefeed": "lf",
-        "outputStyle": "expanded",
-        "precision": 10,
-        "sourceMap": false,
-        "removeCharset": false,
-        "sourceComments": false
-      },
       "png": {
         "quality": 90
       },
@@ -434,6 +423,17 @@
       },
       "turf": {
         "rootDir": ""
+      },
+      "node-sass": {
+        "indentType": "space",
+        "allowWildcardImports": false,
+        "indentWidth": 2,
+        "linefeed": "lf",
+        "outputStyle": "expanded",
+        "precision": 10,
+        "sourceMap": false,
+        "removeCharset": false,
+        "sourceComments": false
       }
     },
     "fileTypes": {
